# cargo-bless

./: .coderabbit.yaml  .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  changelog.md  patch_fix.rs  patch_suggestions.rs  plan.md  readme.md  tipsforai.md
.github/workflows/: ci.yml  update-rules.yml
data/: suggestions.json
docs/: README.md  architecture.md  cli-reference.md  contributing.md  phase3-workspace-design.md
src/: advisories.rs  bs_detector.rs  cli.rs  code_audit.rs  feedback.rs  fix.rs  fix.rs.orig  intel.rs  lib.rs  main.rs  output.rs  parser.rs  policy.rs  suggestions.rs  suggestions.rs.orig  updater.rs
tests/: integration.rs  real_project_test.rs
tests/fixtures/old-rust-project/: Cargo.toml
tests/fixtures/old-rust-project/src/: main.rs
