[package]
name = "cargo-bless"
version = "0.2.3"
edition = "2021"
rust-version = "1.80"
default-run = "cargo-bless"
description = "Modernize your Rust dependencies with blessed.rs + live intel"
license = "MIT"
repository = "https://github.com/Ruffian-L/cargo-bless"
homepage = "https://github.com/Ruffian-L/cargo-bless"
readme = "README.md"
keywords = ["cargo", "dependencies", "modernize", "blessed", "lint"]
categories = ["development-tools::cargo-plugins"]
exclude = [
    "plan.md",
    "tipsforai.md",
    ".github/",
    ".coderabbit.yaml",
    ".agents/",
    "bullshitdetector/",
    "docs/phase3-workspace-design.md",
]

[[bin]]
name = "cargo-bless"
path = "src/main.rs"

[[bin]]
name = "update-suggestions"
path = "src/bin/update_suggestions.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Cargo parsing
cargo_metadata = "0.19"

# crates.io API
crates_io_api = { version = "0.12", default-features = false, features = ["rustls"] }

# TOML editing (comment-preserving)
toml_edit = { version = "0.22", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

# Terminal output
colored = "2"

# XDG-compliant cache paths
directories = "6.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "=3.23.0"
assert_cmd = "=2.1.2"
predicates = "=3.1.4"
